fix: move dialog covered by post content to top

--- a/src/site/components/Dialog/Dialog.module.css
+++ b/src/site/components/Dialog/Dialog.module.css
@@ -8,6 +8,7 @@
   flex-flow: column nowrap;
   align-items: center;
   pointer-events: none;
+  z-index: 9998;
 }
 
 .backdrop.modal {
